--- a/src/frontend/signup.html
+++ b/src/frontend/signup.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+    <form action="http://localhost:8080/signupForm" method="post">
         <label for="email">Email:</label>
-        <input type="text" name="email" required>
+        <input type="email" name="email" id="email" required>
         
         <label for="password">Password:</label>
-        <input type="password" for="password" required>
+        <input type="password" name="password" id="password" required>
         
-        <label for="password-repeat">Confirm Password:</label>
-        <input type="password" required>
+        <label for="passwordRepeat">Confirm Password:</label>
+        <input type="password" name="passwordRepeat" id="passwordRepeat" required>
 
         <button type="submit">Sign Up</button>
     </form>
