--- a/src/frontend/signup.html
+++ b/src/frontend/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css"> 
 </head>
 <body>
     <h1>SIGN UP</h1>
@@ -14,7 +15,7 @@
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" required>
         
-        <label for="phone">Phone Number:</label>
+        <label for="phone">Phone:</label>
         <input type="tel" name="phone" id="phone" required>
         
         <label for="password">Password:</label>
